compatible with demo exchange
